# jim-fitness-agent

./: .env.example  .vercelignore  CLAUDE.md  DEPLOY.md  HANDOFF.md  PLAN.md  README.md  pyproject.toml  render.yaml  requirements.txt  vercel.json
.claude/agents/: responsive-check.md
api/: index.py
data/corpus/: README.md  pt_protocol_TEMPLATE.md
docs/: architecture.md  chat.md  garmin_strength.md  memory.md  notion_schema.md
evals/: run_evals.py
migrations/: 001_initial.sql
playbook/: base_workouts.yaml  directives.md  pt_routines.yaml
playbook/defaults/: base_workouts.yaml  directives.md  pt_routines.yaml
scripts/: backfill.py  backfill_users.py  exercise_map.py  m1_roundtrip.py  refresh_garmin_exercises.py  seed_corpus.py
src/jim/: app.py  auth.py  chat.py  coach.py  config.py  crypto.py  db.py  playbook.py  schemas.py
src/jim/agent/: compose.py  loop.py  validate.py
src/jim/data/: garmin_exercises.json
src/jim/jobs/: nightly.py  reconcile.py
src/jim/migrations/: 002_research_corpus.sql  003_chat.sql  004_exercise_sets.sql  005_day_score_float.sql  006_pain_notes.sql  007_users.sql  008_user_pks.sql
src/jim/tools/: exercise_match.py  garmin.py  history.py  memory.py  notion.py  research.py
src/jim/web/: auth_routes.py  chat_routes.py  deps.py  garmin_routes.py  playbook_routes.py  templates.py
src/vesper/: config.py  db.py  playbook.py  schemas.py
src/vesper/agent/: compose.py  loop.py
src/vesper/jobs/: reconcile.py
src/vesper/tools/: garmin.py  notion.py  research.py
tests/: test_app.py  test_auth.py  test_chat.py  test_coach.py  test_compose.py  test_crypto.py  test_exercise_history.py  test_exercise_match.py  test_garmin.py  test_garmin_import.py  test_garmin_onboarding.py  test_garmin_payload.py  test_heuristics.py  test_history.py  test_loop.py  test_multi_user_isolation.py  test_nightly.py  test_notion.py  test_playbook.py  test_playbook_api.py  test_reconcile.py  test_research.py  test_validate.py  test_workout_cleanup.py
tests/fixtures/: knee_log_page.json
