[project]
name = "jim"
version = "0.1.0"
description = "Nightly training agent: reviews the day (Garmin + Notion), proposes tomorrow's session, pushes structured workouts to Garmin on approval."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "psycopg[binary]>=3.1",
    "openai>=1.40",            # OpenRouter-compatible client (base_url override)
    "garminconnect>=0.2.19",
    "notion-client>=2.2",
    "tavily-python>=0.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "pillow>=10.0",   # scripts/make_icon.py only — icons are committed, so the
                      # app never imports it at runtime (Render needs no fonts)
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Both are read at runtime, so they must ship inside the package — a serverless
# bundle (and any non-editable install) includes package data but not loose
# top-level directories.
[tool.setuptools.package-data]
jim = ["static/*.png", "migrations/*.sql", "data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# app.py embeds the chat page (HTML/CSS/JS) as one inline string — long
# markup lines are expected and shouldn't be reflowed to satisfy E501.
"src/jim/app.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
